--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -43,13 +43,14 @@
                 <AutoSuggestBox x:Name="asb"
                                 Grid.Column="1"
                                 Margin="8"
-                                IsEnabled="False"
                                 PlaceholderText="Search..." 
+                                Text="{x:Bind SearchResult.KeyWord, Mode=OneWay}"
                                 QuerySubmitted="AutoSuggestBox_QuerySubmitted"
                                 QueryIcon="Find" />
                 <controls:CategorySelector x:Name="cs_AdvancedSearch"
                                            Grid.Row="1"
                                            Grid.Column="1"
+                                           SelectedCategory="{x:Bind SearchResult.Filter, Mode=OneWay}"
                                            Margin="0,0,0,0"
                                            x:DeferLoadStrategy="Lazy"
                                            HorizontalAlignment="Center" />
@@ -95,10 +96,5 @@
                    Visibility="{x:Bind SearchResult.IsEmpty, FallbackValue=Collapsed, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
                    RelativePanel.Below="ab"
                    RelativePanel.AlignHorizontalCenterWithPanel="True">No hits found</TextBlock>
-        <TextBlock Margin="12"
-                   Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind SearchResult, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
-                   RelativePanel.Below="ab"
-                   RelativePanel.AlignHorizontalCenterWithPanel="True">Searching...</TextBlock>
     </RelativePanel>
 </Page>
