--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -43,14 +43,21 @@
                 <AutoSuggestBox x:Name="asb"
                                 Grid.Column="1"
                                 Margin="8"
-                                PlaceholderText="Search..." 
-                                Text="{x:Bind SearchResult.KeyWord, Mode=OneWay}"
+                                PlaceholderText="Search..."
                                 QuerySubmitted="AutoSuggestBox_QuerySubmitted"
-                                QueryIcon="Find" />
+                                TextChanged="asb_TextChanged"
+                                SuggestionChosen="asb_SuggestionChosen"
+                                QueryIcon="Find">
+                    <AutoSuggestBox.TextBoxStyle>
+                        <Style TargetType="TextBox" BasedOn="{StaticResource AutoSuggestBoxTextBoxStyle}">
+                            <Setter Property="InputScope"
+                                    Value="AlphanumericHalfWidth" />
+                        </Style>
+                    </AutoSuggestBox.TextBoxStyle>
+                </AutoSuggestBox>
                 <controls:CategorySelector x:Name="cs_AdvancedSearch"
                                            Grid.Row="1"
                                            Grid.Column="1"
-                                           SelectedCategory="{x:Bind SearchResult.Filter, Mode=OneWay}"
                                            Margin="0,0,0,0"
                                            x:DeferLoadStrategy="Lazy"
                                            HorizontalAlignment="Center" />
